docs: expand README with 300+ lines of practical examples
- Add 11 new language/platform-specific examples (Ruby, Rust, AWS, Java, Gradle, Elixir, CI/CD, Terraform, Redis, MongoDB, Webpack)
- Add advanced features section with severity filtering and batch analysis
- Add CI/CD integration examples (GitHub Actions, GitLab CI)
- Add shell aliases and workflow tips
- Add comprehensive troubleshooting section
- Total additions: ~350 lines covering real-world error scenarios